# AbSolution

./: pyproject.toml
absolution/: consts.py  format_input.py  option_utils.py  postprocess.py
absolution/processing_steps/: abundance_and_enrichment.py  processing_step.py
absolution/processing_steps/clustering/: clustering_analysis.py  clustering_processing_step.py  option_requirements.py
absolution/processing_steps/enrichment/: enrichmen_processing_step.py  option_requirements.py
absolution/processing_steps/liabilities/: liabilities_processing_step.py  option_requirements.py
