[tool.poetry]
name = "absolution"
version = "0.1.0"
description = ""
authors = ["katheryn.perea-schmittle <katheryn.perea-schmittle@q2labsolutions.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.2.3"
click = "^8.1.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
